--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,16 +1,22 @@
 <div class="sidenav" [ngClass]="collapsed ? 'sidenav-collapsed': ''">
     <div class="logo-container">
-        <button class="logo" (click)="toggleCollapse()">E</button>
+        <button class="logo" (click)="toggleCollapse()"><i class="fa fa-bars" aria-hidden="true"></i></button>
         <div class="logo-text" *ngIf="collapsed">E-Crédit</div>
         <button class="btn-close" *ngIf="collapsed" (click)="closeSidenav()">
             <i class="fal fa-times close-icon"></i>
         </button>
     </div>
     <ul class="sidenav-nav">
-        <li class="sidenav-nav-item" *ngFor="let data of navData">
-            <a href="" class="sidenav-nav-link" [routerLink]="[data.routerLink]">
-                <i class="sidenav-link-icon" [class]="data.icon"></i>
-                <span class="sidenav-link-text" *ngIf="collapsed">{{data.label}}</span>
+        <li class="sidenav-nav-item" >
+            <a href="" class="sidenav-nav-link" routerLink="demande">
+                <i class="fa fa-tag sidenav-link-icon text-center" aria-hidden="true"></i>
+                <span class="sidenav-link-text" *ngIf="collapsed">Demande crédit</span>
+            </a>
+        </li>
+        <li class="sidenav-nav-item">
+            <a href="" class="sidenav-nav-link" routerLink="credits">
+                <i class="fa fa-clone sidenav-link-icon text-center" aria-hidden="true"></i>
+                <span class="sidenav-link-text" *ngIf="collapsed">Consulter demandes</span>
             </a>
         </li>
     </ul>
