--- a/src/app/suivi/suivi.component.html
+++ b/src/app/suivi/suivi.component.html
@@ -6,13 +6,13 @@
                     <label>Entrée en relation le :</label>
                 </td>
                 <td colspan="3">
-                    <p-calendar [disabled]="true" dateFormat="dd/mm/yy" [showIcon]="true"></p-calendar>
+                    <p-calendar [disabled]="true" dateFormat="dd/mm/yy" [showIcon]="true" [(ngModel)]="dateSysteme"></p-calendar>
                 </td>
                 <td colspan="2">
                     <label>Par :</label>
                 </td>
                 <td colspan="3">
-                    <input type="text" pinputtext class="p-inputtext p-component p-element p-filled ng-untouched ng-pristine" disabled>                
+                    <input type="text" pinputtext class="p-inputtext p-component p-element p-filled ng-untouched ng-pristine" value="Ben Arbia Oumaima"disabled>                
                 </td>
             </tr>
         </table>
