--- a/src/app/garantie/garantie.component.html
+++ b/src/app/garantie/garantie.component.html
@@ -4,14 +4,10 @@
     <p-table
     #dt
     [rows]="10"
-    [paginator]="true"
-    [globalFilterFields]="['name', 'country.name', 'representative.name', 'status']"
-    [tableStyle]="{ 'min-width': '75rem' }"
+    [tableStyle]="{ 'min-width': '100%' }"
     [rowHover]="true"
     dataKey="id"
-    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-    [showCurrentPageReport]="true"
->
+  >
     <ng-template pTemplate="header">
         <tr>
             <th style="text-align: center;">Nature</th>
@@ -19,21 +15,24 @@
             <th style="text-align: center;">Valeur</th>
             <th style="text-align: center;">Devise</th>
             <th style="text-align: center;">Action</th>
-            <th><button pButton pRipple icon="pi pi-plus" class="p-button-rounded p-button-info"></button></th>
+            <th><button pButton pRipple icon="pi pi-plus" class="p-button-rounded p-button-info" (click)="ouvrirDialog()"></button></th>
         </tr>
-    </ng-template>
-    <ng-template pTemplate="body">
+
+
         <!-- Première ligne statique -->
-        <tr>
-            <td>TEST</td>
-            <td>test</td>
-            <td>TEST</td>
-            <td>TEST</td>
-            <td>
-                <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2"></button>
-                <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning"></button>
+        <tr *ngFor="let g of garanties">
+            <!-- Affichez les propriétés de la garantie -->
+            <td class="text-center">{{g.natureG}}</td>
+            <td class="text-center">{{g.typeG}}</td>
+            <td class="text-center">{{g.valeur}}</td>
+            <td class="text-center">{{g.devise}}</td>
+            <td class="text-center">
+              <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2"></button>
+              <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning"></button>
             </td>
+            <br>
         </tr>
+        <br>
     </ng-template>
 </p-table>
 
@@ -42,3 +41,48 @@
 <br>
 
 </p-fieldset>
+
+
+<p-dialog header="Ajouter garantie" [(visible)]="visible" [style]="{ 'width': '62%' }">
+<div>
+    <table>
+        <tr>
+            <td >
+                <label>Nature garantie:</label>
+            </td>
+            <td colspan="4">
+                <p-dropdown placeholder="Choisir :" class="p-dropdown-custom" [options]="naturesG" optionLabel="libNG" [style]="{ minWidth: '100px', width: '200%' }" (onChange)="onNatureGChange($event)" [(ngModel)]="selectedNatureGId"></p-dropdown>
+            </td>
+            <td style="width: 400px;"></td>
+            <td >
+                <label>Type garantie :</label>
+            </td>
+            <td colspan="4">
+                <p-dropdown placeholder="Choisir :" [(ngModel)]="selectedTypeG" class="p-dropdown-custom" [options]="typesG" optionLabel="libTG" [style]="{ minWidth: '200px', width: '200%' }"></p-dropdown>
+            </td>
+        </tr>
+        <br>
+        <tr>
+            <td >
+                <label>Valeur :</label>
+            </td>
+            <td colspan="4">
+                <input type="text" [(ngModel)]="selectedValeur" pInputText class="p-inputtext p-component p-element p-filled ng-untouched ng-pristine custom-input" [style]="{ minWidth: '100px', width: '200%' }">
+            </td>
+            <td style="width: 400px;"></td> 
+            <td >
+                <label>Devise :</label>
+            </td>
+            <td colspan="4">
+                <p-dropdown placeholder="Choisir :"  [(ngModel)]="selectedDevise" [options]="devises" class="p-dropdown-custom" [style]="{ minWidth: '200px', width: '200%' }"></p-dropdown>
+            </td>
+        </tr>
+        <br>
+    </table>
+    <div style="text-align: center; margin-top: 20px;">
+        <button pButton type="button" icon="pi pi-plus" label="Enregistrer" class="p-button-info custom-button" (click)="enregistrerGarantie()"></button>
+        <button pButton type="onSubmit" icon="pi pi-refresh" label="Réinitialiser" class="p-button-warning custom-button" (click)="reinitialiser()"></button>
+    </div>
+    <br>
+</div>
+</p-dialog>
