--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -19,5 +19,11 @@
                 <span class="sidenav-link-text" *ngIf="collapsed">Consulter demandes</span>
             </a>
         </li>
+        <li class="sidenav-nav-item">
+            <a href="" class="sidenav-nav-link" routerLink="logout">
+                <i class="fa fa-sign-out sidenav-link-icon text-center" aria-hidden="true"></i>
+                <span class="sidenav-link-text" *ngIf="collapsed">Déconnexion</span>
+            </a>
+        </li>
     </ul>
 </div>
