--- a/src/app/suivi/suivi.component.html
+++ b/src/app/suivi/suivi.component.html
@@ -12,7 +12,7 @@
                     <label>Par :</label>
                 </td>
                 <td colspan="3">
-                    <input type="text" pinputtext class="p-inputtext p-component p-element p-filled ng-untouched ng-pristine" value="Ben Arbia Oumaima"disabled>                
+                    <input type="text" pinputtext class="p-inputtext p-component p-element p-filled ng-untouched ng-pristine" >                
                 </td>
             </tr>
         </table>
