--- a/src/app/credits/credis.component.html
+++ b/src/app/credits/credis.component.html
@@ -1,6 +1,7 @@
     <br>
+    <p-fieldset legend="Consultation crédits" [toggleable]="true">
 
-    <p-table
+<p-table
     #dt
     [rows]="10"
     [paginator]="true"
@@ -21,20 +22,33 @@
             <th style="text-align: center;">Date Demande</th>
             <th style="text-align: center;">Actions</th>
         </tr>
-    </ng-template>
-    <ng-template pTemplate="body">
-        <!-- Première ligne statique -->
-        <tr>
-            <td>TEST</td>
-            <td>test</td>
-            <td>TEST</td>
-            <td>TEST</td>
-            <td>
-                <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2"></button>
-                <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning"></button>
-            </td>
-        </tr>
+    
+        <tr *ngFor="let demande of demandes; let i = index">
+            <td class="text-center">{{ i + 1 }}</td>
+            <td class="text-center">{{ demande.demande.idDemande }}</td>
+            <td class="text-center">{{ demande.prop.nom }} {{ demande.prop.prenom }}</td>
+            <td class="text-center">{{ demande.nomC }}</td>
+            <td class="text-center">
+                <ng-container *ngIf="demande.demande.etat === 0">En cours</ng-container>
+                <ng-container *ngIf="demande.demande.etat === 1">Validée</ng-container>
+                <ng-container *ngIf="demande.demande.etat === -1">Rejetée</ng-container>
+              </td>            
+            <td class="text-center">{{ demande.demande.dateDemande | date:'dd/MM/yyyy' }}</td>
+            <td class="text-center">
+                <ng-container *ngIf="demande.demande.etat === 0">
+                    <button pButton pRipple icon="pi pi-eye" class="p-button-rounded p-button-info mr-2" (click)="afficherDetailsDemande(demande.demande.idDemande)"></button>
+                    <button pButton pRipple icon="pi pi-check" class="p-button-rounded p-button-success mr-2" (click) = "validerDemande(demande)"></button>
+                    <button pButton pRipple icon="pi pi-times" class="p-button-rounded p-button-warning" (click) = "rejeterDemande(demande)"></button>
+                </ng-container>
+                <ng-container *ngIf="demande.demande.etat === 1 || demande.demande.etat === -1">
+                    <button pButton pRipple icon="pi pi-eye" class="p-button-rounded p-button-info" (click)="afficherDetailsDemande(demande.demande.idDemande)"></button>
+                </ng-container>
+                </td>              
+          </tr>
     </ng-template>
 </p-table>
+<br>
+
+</p-fieldset>
 
 
