--- a/src/app/observation/observation.component.html
+++ b/src/app/observation/observation.component.html
@@ -1,6 +1,6 @@
 <p-fieldset legend="Observation" [toggleable]="true">
     <div>
-      <textarea pInputTextarea rows="5" placeholder="Ajouter une observation" style="width: 1900%; max-width:1900px;"></textarea>
+      <textarea [(ngModel)]="observation" pInputTextarea rows="5" placeholder="Ajouter une observation" style="width: 1900%; max-width:1900px;"></textarea>
     </div>
   </p-fieldset>
   
