--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -20,10 +20,11 @@
             </a>
         </li>
         <li class="sidenav-nav-item">
-            <a href="" class="sidenav-nav-link" routerLink="logout">
-                <i class="fa fa-sign-out sidenav-link-icon text-center" aria-hidden="true"></i>
-                <span class="sidenav-link-text" *ngIf="collapsed">Déconnexion</span>
+            <a href="#" class="sidenav-nav-link" (click)="onLogoutClick()">
+              <i class="fa fa-sign-out sidenav-link-icon text-center" aria-hidden="true"></i>
+              <span class="sidenav-link-text" *ngIf="collapsed">Déconnexion</span>
             </a>
-        </li>
+          </li>
+          
     </ul>
 </div>
