--- a/src/app/credits/credis.component.html
+++ b/src/app/credits/credis.component.html
@@ -48,6 +48,7 @@
     </ng-template>
 </p-table>
 <br>
+<p-confirmDialog header="Confirmation" icon="pi pi-exclamation-triangle"></p-confirmDialog>
 
 </p-fieldset>
 
