--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <p-toast></p-toast>
     <div class="form-container">
         <form>
             <div class="logo-container">
@@ -22,6 +23,9 @@
                     </span>
                 </tr>
             </table>
+            <p-toast></p-toast>
+
+            <br>
             <p class="forgot-password">Mot de passe oublié ?</p>
             <br>
             <br>
@@ -42,3 +46,4 @@
         </form>
     </div>
 </div>
+
