--- a/src/app/garantie/garantie.component.html
+++ b/src/app/garantie/garantie.component.html
@@ -2,49 +2,44 @@
     <br>
 
     <p-table
-    #dt
-    [rows]="10"
-    [tableStyle]="{ 'min-width': '100%' }"
-    [rowHover]="true"
-    dataKey="id"
-  >
-    <ng-template pTemplate="header">
-        <tr>
-            <th style="text-align: center;">Nature</th>
-            <th style="text-align: center;">Type</th>
-            <th style="text-align: center;">Valeur</th>
-            <th style="text-align: center;">Devise</th>
-            <th style="text-align: center;">Action</th>
-            <th><button pButton pRipple icon="pi pi-plus" class="p-button-rounded p-button-info" (click)="ouvrirDialog()"></button></th>
-        </tr>
+        #dt
+        [rows]="10"
+        [tableStyle]="{ 'min-width': '100%' }"
+        [rowHover]="true"
+        dataKey="id"
+    >
+        <ng-template pTemplate="header">
+            <tr>
+                <th style="text-align: center;">Nature</th>
+                <th style="text-align: center;">Type</th>
+                <th style="text-align: center;">Valeur</th>
+                <th style="text-align: center;">Devise</th>
+                <th style="text-align: center;">Action</th>
+                <th style="text-align: center;">    <button pButton pRipple icon="pi pi-plus" class="p-button-rounded p-button-info" (click)="ouvrirDialog()"></button>
+                </th> 
+            </tr>
+            <tr *ngFor="let g of garanties">
+                <td class="text-center">{{ g.natureG }}</td>
+                <td class="text-center">{{ g.typeG }}</td>
+                <td class="text-center">{{ g.valeur }}</td>
+                <td class="text-center">{{ g.devise }}</td>
+                <td class="text-center">
+                    <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2" (click)="ouvrirDialogg(g)"></button>
+                    <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning" (click)="supprimerGarantie(g)"></button>
+                </td>
+                <td></td>
+            </tr><br>
+        </ng-template>
+    </p-table>
 
 
-        <!-- Première ligne statique -->
-        <tr *ngFor="let g of garanties">
-            <!-- Affichez les propriétés de la garantie -->
-            <td class="text-center">{{g.natureG}}</td>
-            <td class="text-center">{{g.typeG}}</td>
-            <td class="text-center">{{g.valeur}}</td>
-            <td class="text-center">{{g.devise}}</td>
-            <td class="text-center">
-              <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2"></button>
-              <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning"></button>
-            </td>
-            <br>
-        </tr>
-        <br>
-    </ng-template>
-</p-table>
-
-
-
-<br>
-
+    <br>
 </p-fieldset>
 
 
+
 <p-dialog header="Ajouter garantie" [(visible)]="visible" [style]="{ 'width': '62%' }">
-<div>
+    <div>
     <p-toast></p-toast>
     <table>
         <tr>
@@ -81,7 +76,7 @@
         <br>
     </table>
     <div style="text-align: center; margin-top: 20px;">
-        <button pButton type="button" icon="pi pi-plus" label="Enregistrer" class="p-button-info custom-button" (click)="enregistrerGarantie()"></button>
+        <button pButton type="button" icon="pi pi-plus" label="Ajouter" class="p-button-info custom-button" (click)="enregistrerGarantie()"></button>
         <button pButton type="onSubmit" icon="pi pi-refresh" label="Réinitialiser" class="p-button-warning custom-button" (click)="reinitialiser()"></button>
     </div>
     <br>
